--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -77,6 +77,8 @@ services:
       MARIADB_USER: $DATABASE_USER
       MARIADB_PASSWORD: $DATABASE_PASSWORD
       MARIADB_DATABASE: $DATABASE_NAME
+    ports:
+      - 3306:3306
     volumes:
       - ./database:/var/lib/mysql
   node:
