--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+BASE_URL=http://localhost:8000
+
 PHP_VERSION=8.0.0
 PHP_USER_NAME=php
 PHP_USER_IDENTIFIER=1000
@@ -8,7 +10,7 @@ DATABASE_VERSION=10.9.4
 DATABASE_USER=user
 DATABASE_PASSWORD=password
 DATABASE_ROOT_PASSWORD=rootpassword
-DATABASE_NAME=database
+DATABASE_NAME=Tripipics
 
 SERVER_VERSION=1.23.3
 SERVER_PORT=8000
