ajout resend api key in .env

--- a/.env.example
+++ b/.env.example
@@ -12,5 +12,7 @@ DATABASE_PASSWORD=password
 DATABASE_ROOT_PASSWORD=rootpassword
 DATABASE_NAME=Tripipics
 
+RESEND_API_KEY=re_Qey1W4cb_5tFgTvNNwsPDoAue4hsjEj7d
+
 SERVER_VERSION=1.23.3
 SERVER_PORT=8000
