feature: initialisation des fichiers nécessaire pour le framework front

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -39,7 +39,6 @@ services:
     volumes:
       - ./sources:$PHP_USER_HOME_DIRECTORY
 
-
   migration:
     container_name: migration
     restart: unless-stopped
@@ -89,4 +88,4 @@ services:
     working_dir: /app
     volumes:
       - ./sources:/app
-    command: sass --watch ./src/scss/main.scss ./dist/css/main.css
+    command: sass --watch ./src/scss/main.scss ./dist/css/main.css --poll
