Fix: Récupération des modifications photo-sharing

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ PHP_USER_IDENTIFIER=1000
 PHP_USER_SHELL=/bin/bash
 PHP_USER_HOME_DIRECTORY=/home/php
 
+DATABASE_HOST=mariadb
 DATABASE_VERSION=10.9.4
 DATABASE_USER=user
 DATABASE_PASSWORD=password
