--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,4 @@
 **/.bash_history
 **/.env
 **/database
-**/node_modules# Ignorer la caisse (transactions, comptes...)
-caisse/
-caisse/*.csv
-caisse/*.json
-caisse/*.txt
-# Ignorer les stocks temporaires
-stock/temp/
-stock/temp/*.log
-# Ignorer les backups de recettes
-recettes/backup/
-*.bak
-*.old
+**/node_modules
